tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_after_return_fn_pure.objc3
module MisplacedQualifierAfterReturnFnPure;

fn add(lhs: i32, rhs: i32) -> i32 pure;

fn main() -> i32 {
  return 0;
}
